# HPC

./: README.md
Harris/: README.md  harris.cu
MatMul/: MatMul.cu  MatMul_graphics_Толстова_6132.ipynb  results.csv
Salt and Pepper/: CMakeLists.txt  README.md  Salt_and_Pepper.cu
VecSum/: README.md  VecSum.cu  VecSum_graphics_Толстова_6132.ipynb  speedup_summary.csv  vector_sum_results_double.csv  vector_sum_results_float.csv  vector_sum_results_int.csv
